--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -3,9 +3,9 @@
   <div class="cards">
     <% @books.each do |book| %>
       <div class="card" style="width: 18rem;">
-          <img class='card-img-top' src="https://raw.githubusercontent.com/lewagon/fullstack-images/master/uikit/skateboard.jpg" />
 
-        <%#= image_tag book.photo, class: 'card-img-top' %>
+
+        <%= cl_image_tag book.photo, class: 'card-img-top' %>
         <div class="card-body">
           <h5 class="card-title"><%= book.name %></h5>
           <p class="card-text"><%= book.author %></p>
