--- a/app/views/books/new.html.erb
+++ b/app/views/books/new.html.erb
@@ -3,6 +3,8 @@
     <%= f.input :name, placeholder: 'Book name', label: false, class: 'ml-3' %>
     <%= f.input :author, placeholder: 'Author name', label: false, class: 'ml-3' %>
     <%= f.input :description, placeholder: 'Description', label: false, class: 'ml-3' %>
+    <%= f.input :photo %>
+  <%= f.input :photo_cache, as: :hidden %>
     <%= f.submit "New Book", class: "btn btn-outline-primary" %>
   <% end %>
   <%= link_to "Back", books_path %>
