--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -5,7 +5,7 @@
       <div class="card" style="width: 18rem;">
 
 
-        <%= cl_image_tag book.photo, class: 'card-img-top' %>
+        <%= cl_image_tag book.photo, class: 'card-img-top book-image' %>
         <div class="card-body">
           <h5 class="card-title"><%= book.name %></h5>
           <p class="card-text"><%= book.author %></p>
