--- a/app/views/books/show.html.erb
+++ b/app/views/books/show.html.erb
@@ -5,6 +5,8 @@
 </h1>
 <h3>  <%= @book.author %>
 </h3>
+<%= link_to "Edit book", edit_book_path(@book) %>
+<br>
 <p>  <%= @book.description %>
 </p>
 </div>
