--- a/app/views/books/index.html.erb
+++ b/app/views/books/index.html.erb
@@ -1,8 +1,8 @@
 <div class="container">
-  <%= link_to 'New', new_book_path, class: 'btn btn-primary' %>
+  <%= link_to 'New', new_book_path, class: 'btn btn-primary mb-4' %>
   <div class="cards">
     <% @books.each do |book| %>
-      <div class="card" style="width: 18rem;">
+      <div class="card-container mb-2" style="width: 18rem;">
 
 
         <%= cl_image_tag book.photo, class: 'card-img-top book-image' %>
