--- a/app/views/books/edit.html.erb
+++ b/app/views/books/edit.html.erb
@@ -2,7 +2,7 @@
   <%= simple_form_for (@book)  do |f| %>
     <%= f.input :name, placeholder: 'Book name', label: false, class: 'ml-3' %>
     <%= f.input :author, placeholder: 'Author name', label: false, class: 'ml-3' %>
-    <%= f.input :description, placeholder: 'Description', label: false, class: 'ml-3' %>
+    <%= f.input :description, placeholder: 'Description', label: false, as: :text, :input_html => {:rows => 10}, class: 'ml-3' %>
     <%= f.input :photo %>
   <%= f.input :photo_cache, as: :hidden %>
     <%= f.submit "Edit Book", class: "btn btn-outline-primary" %>
