--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -2,6 +2,7 @@
   <div class="row">
     <% if user_signed_in? %>
       <%= link_to 'Books', books_path, class: 'btn btn-primary' %>
+      <%= link_to 'History', histories_path, class: 'btn btn-primary' %>
     <% end %>
   </div>
 </div>
